tests/snapshots/snapshot_test__conflict_path_multiple_parts.snap
---
source: tests/snapshot_test.rs
expression: snapshot
---
@  base

○  jjagent: session multipar pt. 3

Claude-session-id: multipart-test-12345678

○  jjagent: session multipar pt. 2

Claude-session-id: multipart-test-12345678

Added regular file part1.txt:
        1: first part
○  jjagent: session multipar

Claude-session-id: multipart-test-12345678

◆
