tests/snapshots/snapshot_test__create_change_after_integration.snap
---
source: tests/snapshot_test.rs
expression: snapshot
---
@  jjagent: session after-in

Claude-session-id: after-int2-87654321

Added regular file session2.txt:
        1: session 2 content
○  jjagent: session after-in

Claude-session-id: after-int1-12345678

Added regular file session1.txt:
        1: session 1 content
○  uwc

○  base

◆
