tests/snapshots/snapshot_test__create_change_after_moves_working_copy.snap
---
source: tests/snapshot_test.rs
expression: snapshot
---
@  jjagent: session after-wc

Claude-session-id: after-wc-12345678

○  existing commit

○  uwc

○  base

◆
