tests/snapshots/snapshot_test__create_change_after_with_revset.snap
---
source: tests/snapshot_test.rs
expression: snapshot
---
○  commit2

○  commit1

○  uwc

○  base

@  jjagent: session after-re

Claude-session-id: after-revset-87654321

◆
