tests/snapshots/snapshot_test__create_session_change.snap
---
source: tests/snapshot_test.rs
expression: snapshot
---
@  jjagent: precommit create-t

○  uwc

○  jjagent: session create-t

Claude-session-id: create-test-12345678

○  base

◆
