tests/snapshots/snapshot_test__find_session_change_integration.snap
---
source: tests/snapshot_test.rs
expression: snapshot
---
○  uwc

○  jjagent: session find-me

Claude-session-id: find-me-12345678

@  base

◆
